# micro-agent-protocol

./: .gitignore  LICENSE  README.md  SPEC.md  map  map_cli.py  map_interpreter.py  pyproject.toml
compilers/: map_to_krillclaw.py  map_to_openclaw.py
examples/: iot-sensor-monitor.map.yaml  multi-agent-code-review.map.yaml  tech-news-digest.map.yaml
tests/: test_interpreter.py
